fixing parameter table (issue on mobile devices)

--- a/source/stylesheets/overrides.css.scss
+++ b/source/stylesheets/overrides.css.scss
@@ -98,7 +98,7 @@ body {
   table {
     margin-top: -1.5em;
     margin-bottom: 2.5em;
-    width: calc(50% - 28px*2);
+    /* width: calc(50% - 28px*2); */
 
     th {
       font-size: 5px;
